--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -43,11 +44,10 @@
     </section>
 
     <section class="search_section">
-      <h2>Cari Buku (Opsional)</h2>
+      <h2>Cari Judul Buku</h2>
       <form id="searchBook">
-        <label for="searchBookTitle">Judul</label>
         <input id="searchBookTitle" type="text">
-        <button id="searchSubmit" type="submit">Cari</button>
+        <button id="searchSubmit" type="submit"><i class="bi bi-search"></i></button>
       </form>
     </section>
 
